Added box2 and box3

--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -29,7 +29,35 @@
             Follows all Max Safety measures to ensure your food is safe
         </div>
     </div>
-
+    <div class="box2">
+        <img src="https://images.unsplash.com/photo-1516872905660-e96c01ac5ada?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c3Vuc2V0JTIwYXQlMjBzaG9yZXxlbnwwfHwwfHx8MA%3D%3D"
+            alt="beach" class="box2-img">
+        <div class="box2-content">
+            <h1>Explore the diversities in Bali</h1>
+            <p>Lorem ipsum sit amet consectetur adipisicing elit. Ex adipisci, minima non nemo cum velit laborum
+                cupiditate aperiam voluptate id dolor placeat.</p>
+            <button class="box2-btn">Explore Now</button>
+        </div>
+    </div>
+    <div class="box3">
+        <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="food"
+            class="box3-img">
+        <div class="box3-content">
+            <h1>zomato</h1>
+            <p>Discover the best food & drinks in Lucknow</p>
+            <div class="search-bar">
+                <div class="select">
+                    <select>
+                        <option>Lucknow</option>
+                    </select>
+                </div>
+                <div class="search">
+                    <img class="search-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyi_CVTmoL1ITHFxQkfLwvj93hcsgA1Olkhg&s" alt="magnify">
+                    <input type="text" placeholder="Search for restaurant, cuisine or a dish">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
