--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -47,15 +47,31 @@
             <p>Discover the best food & drinks in Lucknow</p>
             <div class="search-bar">
                 <div class="select">
-                    <select>
+                    <select class="select1">
                         <option>Lucknow</option>
                     </select>
                 </div>
                 <div class="search">
-                    <img class="search-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyi_CVTmoL1ITHFxQkfLwvj93hcsgA1Olkhg&s" alt="magnify">
+                    <img class="search-img"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyi_CVTmoL1ITHFxQkfLwvj93hcsgA1Olkhg&s"
+                        alt="magnify">
                     <input type="text" placeholder="Search for restaurant, cuisine or a dish">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="box4">
+        <div class="images">
+            <img src="https://images.unsplash.com/photo-1516655543747-2973ac03d580?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGhpbGxzfGVufDB8MHwwfHx8MA%3D%3D"
+                alt="mountain" class="box4-bg">
+            <div class="image">
+                <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8dXNlciUyMHByb2ZpbGV8ZW58MHx8MHx8fDI%3D"
+                    alt="profile" class="box4-profile">
+            </div>
+        </div>
+        <div class="box4-content">
+            <h1>Rock Buffet</h1>
+            <p>Founder & CEO at B&M</p>
         </div>
     </div>
 
